# Trading

./: CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  catch.h  engine.cpp  engine.hpp  fakeobj.cpp  fakeobj.h  fakeobj.hpp  main.cpp  orderbook.cpp  orderbook.h  orderbook.hpp  orderbooksimulation.cpp  transactioncostmodeling.cpp  transactioncostmodeling.h  webdata.cpp  webdata.hpp
include/: CMakeLists.txt~  fakeobj.hpp  graphing.hpp  helperfunctions.hpp  orderbook.hpp  orderbooksimulation.hpp  quandl.hpp
src/: algorithms.cpp  engine.cpp  fakeobj.cpp  graphing.cpp  helperfunctions.cpp  main.cpp  orderbook.cpp  orderbooksimulation.cpp  transactioncostmodeling.cpp  webdata.cpp
